--- a/walkure-motherboard/src/platformio.ini
+++ b/walkure-motherboard/src/platformio.ini
@@ -11,18 +11,16 @@
 [base]
 platform = espressif32
 framework = arduino
-monitor_speed =115200
-lib_deps = paulstoffregen/OneWire@^2.3.2
-
-;lib_deps = 
-	;espdmx
-	;https://github.com/someweisguy/esp_dmx.git
-	;https://github.com/tommyco10/esp_dmx_mod.git
+monitor_speed = 115200
+lib_deps = 
+	paulstoffregen/OneWire@^2.3.2
+	ayushsharma82/ElegantOTA@^3.1.7
+	esp32async/AsyncTCP@^3.3.8
+	me-no-dev/ESPAsyncWebServer@^3.6.0
 
 [env:featheresp32]
 extends = base
 board = featheresp32
-
 build_flags = 
 	-D FAN_PIN1=11
 	-D FAN_PIN2=10
@@ -36,10 +34,11 @@ board = esp32-s3-devkitc-1
 board_upload.flash_size = 4MB
 board_build.partitions = default.csv
 build_flags = 
-  	-D ARDUINO_USB_CDC_ON_BOOT=1
-  	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D BOARD_HAS_PSRAM
 	-D FAN_PIN1=4
 	-D FAN_PIN2=5
 	-D FAN_PIN3=6
 	-D TEMP_PCB=7
 	-D TEMP_AIR=8
+	-DELEGANTOTA_USE_ASYNC_WEBSERVER=1
